deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sai-cisco-app
  name: sai-cisco-app
  namespace: sai-ns # namespace 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sai-cisco-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sai-cisco-app
    spec:
      containers:
      - image: sainathuk/saiwebapp:ciscowebv1
        name: saiwebapp
        ports:
        - containerPort: 80
        imagePullPolicy: Always # everytime pull image 
        resources: # restricting pod container in term of resoruces 
          requests:
            cpu: 100m
            memory: 200M
          limits:
            cpu: 200m
            memory: 300M
